--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python311", "pip"]
+nixPkgs = ["python311"]
 
 [phases.install]
 cmds = ["cd backend && python -m pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && python app.py"
+cmd = "cd backend && gunicorn app:app --worker-class eventlet --bind 0.0.0.0:$PORT"
